# media_codec_sample

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yk/media_codec_sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  hw_codec.c  hw_codec.h
app/src/main/res/values/: strings.xml
cmake_mediacodec/src/main/: AndroidManifest.xml
cmake_mediacodec/src/main/cpp/: GPU_msdk_codec.cpp  GPU_msdk_codec.h  image_scaler.cpp  image_scaler.h
cmake_mediacodec/src/main/cpp/include/: GPU_codec_api.h  codec_api.h  codec_app_def.h
cmake_mediacodec/src/main/res/layout/: activity_main.xml
cmake_mediacodec_c/: CMakeLists.txt  build.gradle
cmake_mediacodec_c/src/main/: AndroidManifest.xml
cmake_mediacodec_c/src/main/cpp/: GPU_msdk_codec.cpp  GPU_msdk_codec.h
cmake_mediacodec_c/src/main/cpp/include/: GPU_codec_api.h  codec_app_def.h
cmake_mediacodec_c/src/main/java/com/yk/cmake_mediacodec_c/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
text_media/: CMakeLists.txt  build.gradle
text_media/src/androidTest/java/com/yk/text_media/: ExampleInstrumentedTest.java
text_media/src/main/: AndroidManifest.xml
text_media/src/main/cpp/: H264MediaCodec.cpp  com_yk_text_media_MainActivity.h
text_media/src/main/cpp/include/: GPU_codec_api.h  GPU_msdk_codec.h  codec_api.h  image_scaler.h
text_media/src/main/java/com/yk/text_media/: MainActivity.java
text_media/src/test/java/com/yk/text_media/: ExampleUnitTest.java
(+5 files in other folders)
